--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-router": "^0.1.5",
     "request": "^2.74.0",
     "telegram-node-bot": "^3.0.12"
   },
