--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-router": "^0.1.5",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
     "request": "^2.74.0",
     "telegram-node-bot": "^3.0.12"
   },
